[ TG-1 ] Update password reset process
